--- a/estadistica.html
+++ b/estadistica.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clasificación</title>
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="/partidos.css">
 
 </head>
 <body>
-
-  
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="/home.html"> <img src="/icono.png" alt="icono" width="100" height="40"></a>
@@ -32,35 +30,23 @@
       </div>
     </div>
   </nav>
-
-            <h1>CLASIFICACIÓN</h1>
+    
     <table class="table">
+        <thead class="table-light">
+            <tr>
+                <th>Equipos</th>
+                <th>GF</th>
+                <th>MG</th>
+            </tr>
+        </thead>
+        <tbody id= "tabla3"></tbody>
+    </table>
 
 
+            <script src="/response.js"></script>
+            <script src="/response2.js"></script>
+            <script src="/estadistica.js"></script>
 
-<thead class="table-light">
-    <tr>
-        <th></th>
-        <th>Equipo</th>
-        <th>Pts</th>
-        <th>PJ</th>
-        <th>V</th>
-        <th>E</th>
-        <th>D</th>
-        <th>GF</th>
-        <th>GC</th>
-        <th>DG</th>
-        <th>Últimos 5</th>
-    </tr>
-</thead>
-<tbody id="tabla2">
-
-</tbody>
-</table>
-
-
-    <script src="/response.js"></script>
-    <script src="/response2.js"></script>
-    <script src="/clasificacion.js"></script>
+    
 </body>
 </html>
