--- a/home.html
+++ b/home.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
     <link rel="stylesheet" href="/partidos.css">
 </head>
 <body>
-<header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="/home.html"> <img src="/icono.png" alt="icono" width="100" height="40"></a>
@@ -31,44 +29,45 @@
           </div>
         </div>
       </nav>
-</header>
+<main>
+
+  <h1>BIENVENIDOS A LA PÁGINA OFICIAL DE LA LIGA</h1>
+  <div class="container">
+    <div class="row">
+      <div class="noticia">
+      <div class="col-sm-8"> </div>
+      <img src="" alt="" srcset="">
+      <p>fecha</p>
+      <h5>Titular de la noticia</h5>
+      <p>comentario de noticia</p>
+    </div>
+    </div>
+
+      <div class="noticia">
+      <div class="col-sm-4"><h3>Últimas noticias</h3> 
+      <img src="" alt="" srcset="">
+      <p>fecha</p>
+      <h5>Titular de la noticia</h5>
+      <p>comentario de noticia</p>
+    </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm"><a class="btn btn-primary" href="/index.html" role="button">Partidos</a> </div>
+      <div class="col-sm"><a class="btn btn-primary" href="/clasificacion.html" role="button">Clasificación</a></div>
+      <div class="col-sm"><a class="btn btn-primary" href="/estadistica.html" role="button">Estadísticas</a></div>
+    </div>
+  </div>
+</main>
+    
 
 
-  
-
-<h1>PARTIDOS</h1>
 
 
-
-    <table class="table">
-        <thead class="table-light">
-            <tr>
-              <div class="col-sm-12">
-                <th>Jornada</th>
-              </div>
-                <div class="col-sm-12">
-
-                <th>Local</th>
-              </div>
-                <th></th>
-                <th>Visitante</th>
-            </tr>
-        </thead>
-        <tbody id="tabla"></tbody>
-    </table>
-
-
-
-
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>   
-<script src="/response.js"></script>
-<script src="/response2.js"></script>
-    <script src="/functions.js"></script>
-
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>   
+      <script src="/response.js"></script>
+      <script src="/response2.js"></script>
+      
+      <script src="/home.js"></script>
 </body>
 </html>
