--- a/clasificacion.html
+++ b/clasificacion.html
@@ -9,18 +9,20 @@
 
 </head>
 <body>
-
-  
+<main>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/home.html"> <img src="/icono.png" alt="icono" width="100" height="40"></a>
+      <a class="navbar-brand" href="/home.html"> <img src="/img/icono.png" alt="logo" width="80" height="40"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/index.html">Partidos</a>
+            <a class="nav-link active" aria-current="page" href="/home.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/index.html">Partidos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/clasificacion.html">Clasificación</a>
@@ -29,12 +31,15 @@
             <a class="nav-link" href="/estadistica.html">Estadísticas</a>
           </li>
         </ul>
+        <span class="navbar-text">
+          Liga 2020/2021
+        </span>
       </div>
     </div>
   </nav>
 
             <h1>CLASIFICACIÓN</h1>
-    <table class="table">
+    <table class="table table-hover">
 
 
 
@@ -57,8 +62,9 @@
 
 </tbody>
 </table>
+</main>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>   
     <script src="/response.js"></script>
     <script src="/response2.js"></script>
     <script src="/clasificacion.js"></script>
