--- a/index.html
+++ b/index.html
@@ -5,42 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
     <link rel="stylesheet" href="/partidos.css">
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/home.html"> <img src="/icono.png" alt="icono" width="100" height="40"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/index.html">Partidos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/clasificacion.html">Clasificación</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/estadistica.html">Estadísticas</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-</header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/home.html"> <img src="/img/icono.png" alt="logo" width="80" height="40"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/home.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/index.html">Partidos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/clasificacion.html">Clasificación</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/estadistica.html">Estadísticas</a>
+          </li>
+        </ul>
+        <span class="navbar-text">
+          Liga 2020/2021
+        </span>
+      </div>
+    </div>
+  </nav>
+<main>
+
+    <h1>PARTIDOS</h1>
 
 
-  
-
-<h1>PARTIDOS</h1>
-
-
-
-    <table class="table">
+    <table class="table table-hover">
         <thead class="table-light">
             <tr>
               <div class="col-sm-12">
@@ -50,25 +50,23 @@
 
                 <th>Local</th>
               </div>
-                <th></th>
+              <div class="col-sm-12">
+                <th>Resultado</th>
+              </div>
+              <div class="col-sm-12">
                 <th>Visitante</th>
+              </div>
             </tr>
         </thead>
         <tbody id="tabla"></tbody>
     </table>
 
-
-
-
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>   
+</main>
+    
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>   
 <script src="/response.js"></script>
 <script src="/response2.js"></script>
-    <script src="/functions.js"></script>
+  <script src="/functions.js"></script>
 
 </body>
 </html>
