creada primera tabla

--- a/estadistica.html
+++ b/estadistica.html
@@ -18,7 +18,7 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/img/home.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="/home.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/index.html">Partidos</a>
@@ -41,12 +41,16 @@
         <thead class="table-light">
             <tr>
                 <th>Equipos</th>
-                <th>GF</th>
-                <th>MG</th>
+                <th>Goles a favor</th>
+                <th>Partidos jugados</th>
+                <th>Media de goles</th>
             </tr>
         </thead>
         <tbody id= "tabla3"></tbody>
     </table>
+
+   
+   
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>   
 
