--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
         <img src="/img/1150809.jpg" alt="" width="300" height="370">
         <a href="/index.html"> <button> Partidos</button></a>
       </div>
-      <div class="col-sm">
+      <div class="col-sm" id="medio">
         <h3>Clasificación</h3>
         <img src="/img/TROFEO-SANTANDER-022.jpg" alt="" width="300" height="370">
         <a href="/clasificacion.html"> <button>Clasificación</button></a>
