terminada segunda tabla

--- a/estadistica.html
+++ b/estadistica.html
@@ -36,8 +36,8 @@
       </div>
     </div>
   </nav>
-    
-    <table class="table">
+    <h1>TOP 5 MEDIA DE GOLES A FAVOR </h1>
+    <table class="table table-hover">
         <thead class="table-light">
             <tr>
                 <th>Equipos</th>
@@ -48,6 +48,18 @@
         </thead>
         <tbody id= "tabla3"></tbody>
     </table>
+
+      <h1>TOP 5 MENOS GOLES EN CONTRA COMO VISITANTE</h1>
+    <table class="table table-hover">
+      <thead class="table-light">
+          <tr>
+              <th>Equipo</th>
+              <th>Partidos jugados como visitante</th>
+              <th>Goles recibidos como visitante</th>
+          </tr>
+      </thead>
+      <tbody id= "tabla4"></tbody>
+  </table>
 
    
    
