--- a/estadistica.html
+++ b/estadistica.html
@@ -41,9 +41,9 @@
         <thead class="table-light">
             <tr>
                 <th>Equipos</th>
-                <th>Goles a favor</th>
-                <th>Partidos jugados</th>
-                <th>Media de goles</th>
+                <th>GF</th>
+                <th>PJ</th>
+                <th>AVG</th>
             </tr>
         </thead>
         <tbody id= "tabla3"></tbody>
@@ -54,8 +54,8 @@
       <thead class="table-light">
           <tr>
               <th>Equipo</th>
-              <th>Partidos jugados como visitante</th>
-              <th>Goles recibidos como visitante</th>
+              <th>PJ</th>
+              <th>GCv</th>
           </tr>
       </thead>
       <tbody id= "tabla4"></tbody>
