añadido fetch a clasificación

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
       <input type="button" value="Buscar" onclick="filtrarPorNombre(partidos)" class="boton">
     </div>
 
+    <div id="mensaje"> </div>
+
     <div class="resultado">
       <div class="ganado">
       <label for="ganado">Ganado</label>
