Creado el readme

--- a/estadistica.html
+++ b/estadistica.html
@@ -9,6 +9,10 @@
 
 </head>
 <body>
+  <div id="contenedor-carga">
+    <div id="carga"></div>
+  </div>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="/home.html"> <img src="/img/icono.png" alt="logo" width="80" height="40"></a>
