--- a/clasificacion.html
+++ b/clasificacion.html
@@ -9,6 +9,10 @@
 
 </head>
 <body>
+<div id="contenedor-carga">
+  <div id="carga"></div>
+</div>
+
 <main>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
