--- a/estadistica.html
+++ b/estadistica.html
@@ -41,6 +41,7 @@
     </div>
   </nav>
     <h1>TOP 5 MEDIA DE GOLES A FAVOR </h1>
+    <div class="top5">
     <table class="table table-hover">
         <thead class="table-light">
             <tr>
@@ -52,8 +53,9 @@
         </thead>
         <tbody id= "tabla3"></tbody>
     </table>
-
-      <h1>TOP 5 MENOS GOLES EN CONTRA COMO VISITANTE</h1>
+  </div>
+      <h1>TOP 5 MENOS GOLES EN CONTRA VISITANTE</h1>
+      <div class="top5">
     <table class="table table-hover">
       <thead class="table-light">
           <tr>
@@ -64,7 +66,7 @@
       </thead>
       <tbody id= "tabla4"></tbody>
   </table>
-
+</div>
    
    
 
