--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@
       <div class="col-sm" id="medio">
         <h3>Clasificación</h3>
         <img src="/img/TROFEO-SANTANDER-022.jpg" alt="" width="300" height="370">
-        <a href="/clasificacion.html"> <button>Clasificación</button></a>
+        <a href="/partidos_LF.html"> <button>Liga_francesa</button></a>
 
       </div>
       <div class="col-sm">
