--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
 <main>
 
     <h1>PARTIDOS</h1>
-
-    <!-- <button onclick="vaciar()">Vaciar</button> -->
- 
     <form>
       <div class="filtro">
       <input  id="filtro" type="search" placeholder="Nombre del equipo" class="barra" required />
@@ -55,10 +52,10 @@
     <div id="mensaje"> </div>
     <div class="radiobuttons">
 
-      <div class="todos">
+      <!-- <div class="todos">
         <label for="todos">Todos</label>
         <input type="radio" name="boton1" id="todos" checked="checked" >
-        </div>
+        </div> -->
 
       <div class="ganado">
       <label for="ganado">Ganado</label>
@@ -82,7 +79,6 @@
 
     
     <table class="table table-hover">
-      <div class="clasif"></div>
         <thead class="table-light">
             <tr>
               <!-- <div class="col-sm-12"> -->
@@ -99,7 +95,6 @@
               <!-- </div> -->
             </tr>
         </thead>
-      </div>
         <tbody id="tabla"></tbody>
     </table>
   
