--- a/estadistica_LI.html
+++ b/estadistica_LI.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="/partidos.css">
+    <link rel="stylesheet" href="partidos.css">
 
 </head>
 <body>
@@ -15,7 +15,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/home.html"> <img src="/img/icono.png" alt="logo" width="80" height="40"></a>
+      <a class="navbar-brand" href="/home.html"> <img src="/img/Serie_A_Logo_(ab_2019).png" alt="logo" width="50" height="40"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -40,21 +40,23 @@
       </div>
     </div>
   </nav>
+  <div class="submenu">
+  <ul class="nav nav-pills">
+    <li class="nav-item">
+      <a class="nav-link" aria-current="page" href="partidos_LI.html">Partidos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/clasificacion_LI.html">Clasificación</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="estadistica_LI.html">Estadísticas</a>
+    </li>
+  </div>
+  
 
-    <div class="submenu">
-      <ul class="nav nav-pills">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="index.html">Partidos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/clasificacion.html">Clasificación</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="estadistica.html">Estadísticas</a>
-        </li>
-      </div>
-
+  
     <h1>TOP 5 MEDIA DE GOLES A FAVOR </h1>
+    
     <div class="top5">
     <table class="table table-hover">
         <thead class="table-light">
@@ -88,7 +90,7 @@
 
             <script src="/response.js"></script>
             <script src="/response2.js"></script>
-            <script src="/estadistica.js"></script>
+            <script src="/estadistica_LI.js"></script>
 
     
 </body>
