--- a/estadistica.html
+++ b/estadistica.html
@@ -42,7 +42,7 @@
   </nav>
 
     <div class="submenu">
-      <ul class="nav nav-pills">
+      <div class="nav nav-pills">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="index.html">Partidos</a>
         </li>
@@ -53,6 +53,7 @@
           <a class="nav-link active" href="estadistica.html">Estadísticas</a>
         </li>
       </div>
+    </div>
 
     <h1>TOP 5 MEDIA DE GOLES A FAVOR </h1>
     <div class="top5">
