--- a/estadistica_LF.html
+++ b/estadistica_LF.html
@@ -41,7 +41,7 @@
     </div>
   </nav>
   <div class="submenu">
-  <ul class="nav nav-pills">
+  <div class="nav nav-pills">
     <li class="nav-item">
       <a class="nav-link" aria-current="page" href="partidos_LF.html">Partidos</a>
     </li>
@@ -51,6 +51,7 @@
     <li class="nav-item">
       <a class="nav-link active" href="estadistica_LF.html">Estadísticas</a>
     </li>
+  </div>
   </div>
   
 
