--- a/clasificacion.html
+++ b/clasificacion.html
@@ -46,7 +46,8 @@
             
           
     <table class="table table-hover">
-      <ul class="nav nav-pills">
+      <div class="clasi">
+      <div class="nav nav-pills">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="index.html">Partidos</a>
         </li>
@@ -56,7 +57,8 @@
         <li class="nav-item">
           <a class="nav-link" href="/estadistica.html">Estadísticas</a>
         </li>
-
+      </div>
+    </div>
 
 <thead class="table-light">
     <tr>
