--- a/clasificacion_LI.html
+++ b/clasificacion_LI.html
@@ -48,7 +48,8 @@
             <h1>CLASIFICACIÓN</h1>
             
     <table class="table table-hover">
-      <ul class="nav nav-pills">
+      <div class="clasi">
+      <div class="nav nav-pills">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="partidos_LI.html">Partidos</a>
         </li>
@@ -58,6 +59,8 @@
         <li class="nav-item">
           <a class="nav-link" href="estadistica_LI.html">Estadísticas</a>
         </li>
+      </div>
+    </div>
 <thead class="table-light">
     <tr>
         <th></th>
